<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/footsteps_silhouette_variant_svgrepo_com"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_stacked_bar_chart_24"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/baseline_stars_24"
            android:title="Achievements" />
        <item
            android:id="@+id/nav_day"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/day" />
        <item
            android:id="@+id/nav_hist"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/history" />
    </group>
</menu>