<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Home.HomeFragment">

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <!-- Default View -->

        <!-- Progress View -->
        <RelativeLayout
            android:id="@+id/defaultView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Inspirational Quote -->
            <TextView
                android:id="@+id/quote_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="false"
                android:text="Your inspirational quote goes here!"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/progressView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:layout_centerInParent="true"
                app:indicatorColor="?attr/colorOnTertiaryContainer"
                app:indicatorSize="304dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:trackColor="?attr/colorTertiaryContainer"
                app:trackThickness="42dp" />

            <TextView
                android:id="@+id/counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/num_steps"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:textSize="88sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:layout_centerInParent="true"
                android:layout_below="@id/counter"
                app:layout_constraintBottom_toTopOf="@+id/counter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/progressBar" />

            <TextView
                android:id="@+id/steps_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:text="@string/steps"
                android:layout_centerInParent="true"
                android:layout_below="@id/goal"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/counter" />
        </RelativeLayout>
    </ViewSwitcher>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">
        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="148dp"
            android:backgroundTint="?attr/colorSecondaryContainer"
            android:text="@string/start_text"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="20sp"
            app:icon="@drawable/baseline_play_circle_filled_24"
            app:iconSize = "32dp"
            app:iconTint="?attr/colorOnSecondaryContainer"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:backgroundTint="?attr/colorSecondaryContainer"
            android:text="@string/stop_text"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="20sp"
            app:icon="@drawable/baseline_stop_circle_24"
            app:iconSize = "32dp"
            app:iconTint="?attr/colorOnSecondaryContainer"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.button.MaterialButtonToggleGroup>


</androidx.constraintlayout.widget.ConstraintLayout>